--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.31.0
-pandas==2.1.4
-plotly==5.18.0
-google-generativeai==0.3.2
-xlsxwriter==3.1.9
-openpyxl==3.1.2
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.17.0
+google-generativeai>=0.3.0
+xlsxwriter>=3.1.0
+openpyxl>=3.1.0
