--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,20 @@ openpyxl>=3.1.0
 scapy>=2.5.0
 dpkt>=1.9.8
 pymongo
+# Core Dependencies
+streamlit==1.28.1
+pandas==2.1.3
+numpy==1.24.3
+
+# Machine Learning
+scikit-learn==1.3.2
+
+# Visualization
+plotly==5.18.0
+
+# File Processing
+openpyxl==3.1.2
+
+# Additional utilities
+python-dateutil==2.8.2
+pytz==2023.3
